

4.8.6 (Aug 9, 2010)
-------------------------
- Show billing items for other periods in Billing window (when clicking on request from tree)
- Moved 'internal pricing' and 'external pricing' radio buttons to Billing Account tab on Group detail window.
- When looking up experiment by request number, find experiment regardless of revision number (proceeding 'R' in experiment number).

4.8.5 patch (July 29, 2010)
-------------------------
- Fixed bug on Illumina submit request that was causing 'Samples' tab to be non-functional when 'Prepped by Core' = 'N'.  Bug introduced with prep instructions.
- Enabled barcoding for Illumina requests where the seq lib is prepped by lab (rather than core)

4.8.5 (July 28, 2010)
-------------------------
- Introduced new Billing Lab Usage report.
- Don't allow Lab to be changed on Analysis edit window.  (Should use drag-n-drop instead)
- Reformat Analysis edit window to leave more room for description.  Moved analysis group to its own tab.
- Move filter widgets and refresh link to top panel in Analysis view.  
- Add ability to filter by multiple labs in Analysis view and ability to filter by analysis created in last week, month, 3 months, or year.
- Add core prep instructions to Submit Illumina Request window.  Show instructions on printable form.
- Fix save bug on Microarray edit screen by refreshing list that populates application radio buttons based on request category.
- Increase width of printable request form from 600 to 700 pixels.


4.8.4 (July 25, 2010)
-------------------------
- Fix email body to work with Outlook 2007 and Gmail HTML renderers.
- Only warn about missing chartfields or blanking out chartfields on PO accounts for billing accounts just updated or added.

4.8.3 (July 21, 2010)
-------------------------
- Fixed bug where reselect on deactivated price caused blacked-out line. (Robb)
- Made change so cursor stays on “complete” after request has been moved from “complete” to “approved.” (Robb)